@@ -23,7 +23,6 @@
 package fr.djaytan.minecraft.jobsreborn.patchplacebreak.api;
 
 import fr.djaytan.minecraft.jobsreborn.patchplacebreak.commons.test.TestResourcesHelper;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import lombok.SneakyThrows;
@@ -42,7 +41,7 @@ class MariadbPatchPlaceBreakApiIntegrationTest extends BasePatchPlaceBreakApiInt
             TestResourcesHelper.getClassResourceAsString(this.getClass(), "mariadb.conf", false),
             dbmsPort);
     Path dataSourceConf = dataFolder.resolve(CONFIG_DATA_SOURCE_FILE_NAME);
-    Files.write(dataSourceConf, givenDataSourceConfFileContent.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(dataSourceConf, givenDataSourceConfFileContent);
     super.beforeEach();
   }
 }
